# ashlag-yomi

./: .env.example  .gitignore  BOTFATHER_SETUP.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ralph.sh  requirements.txt  send_daily.py  vercel.json
.github/workflows/: ci.yml  ci.yml.disabled  daily-quote.yml  daily-quotes.yml  daily_quotes.yml  docker.yml  scrape.yml  test-pipeline.yml
api/: webhook.py
ashlagyomibot/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
ashlagyomibot/.github/: PULL_REQUEST_TEMPLATE.md
ashlagyomibot/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ashlagyomibot/.github/workflows/: ci.yml  ci.yml.disabled  daily-quote.yml  daily-quote.yml.disabled  scrape-quotes.yml.disabled  test-bot.yml  update-commands.yml
ashlagyomibot/data/maamarim/: baal_hasulam.json  rabash.json
ashlagyomibot/data/quotes/: arizal.json  baal_hasulam.json  baal_shem_tov.json  chasdei_ashlag.json  kotzker.json  polish_chassidut.json  rabash.json  simcha_bunim.json  talmidim.json
ashlagyomibot/scripts/: diagnose.py  disable_bot.py  expand_quotes.py  fix_baal_shem_tov.py  fix_chasdei_ashlag.py  populate_quotes.py  register_commands.py  scrape_maamarim.py  send_daily.py  test_bot.py  test_output.py
ashlagyomibot/src/: __init__.py
ashlagyomibot/src/bot/: __init__.py  broadcaster.py  formatters.py  handlers.py  main.py  rate_limit.py  scheduler.py
ashlagyomibot/src/data/: __init__.py  maamar_repository.py  models.py  quote_repository.py  repository.py
ashlagyomibot/src/data/sources/: __init__.py  baal_hasulam.py  base.py  pdf_utils.py  rabash.py
ashlagyomibot/src/unified/: __init__.py  publisher.py
ashlagyomibot/src/utils/: __init__.py  config.py  logger.py
ashlagyomibot/tests/: conftest.py  test_formatters.py  test_maamar_repository.py  test_models.py  test_repository.py
ashlagyomibot/tests/fixtures/: mock_telegram.py
ashlagyomibot/tests/integration/: __init__.py  test_today_command.py
ashlagyomibot/tests/unit/: test_broadcaster.py  test_handlers.py  test_main.py  test_scheduler.py  test_unified.py
data/: subscriptions.json
data/quotes/: arizal.json  ashlag_talmidim.json  baal_hasulam.json  baal_shem_tov.json  kotzker.json  kotzker_rebbe.json  metadata.json  rabash.json  simcha_bunim.json
prompts/: bugfix.md  feature.md
scripts/: setup_bot_commands.py  test_pipeline.py
src/: __init__.py  bot.py  main.py  quote_manager.py  telegram_bot.py
tests/: __init__.py  conftest.py  test_bot.py  test_quote_manager.py  test_quotes.py
